# trabalho-2-angelomiray

./: CMakeLists.txt  readme.md
data/: B2.1_2.sh
include/: canaltexto.h  executor.h  mensagem.h  servidor.h  sistema.h  usuario.h
src/: canaltexto.cpp  concordo.cpp  executor.cpp  mensagem.cpp  servidor.cpp  sistema.cpp  usuario.cpp
